# sensitivity-compiler-testing

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP_GUIDE.md  LICENSE  README.md  VERIFICATION_REPORT.md  pyproject.toml  requirements.txt  setup.py
docs/guides/: quickstart.md
examples/: basic_usage.py  phase_detection_example.py
experiments/configs/: default_experiment.yaml
scripts/: run_experiment.py
src/sensitivity_testing/: __init__.py  cli.py  framework.py
src/sensitivity_testing/algorithms/: __init__.py  lyapunov.py  phase_transition.py  sensitivity_oracle.py
src/sensitivity_testing/analysis/: __init__.py  landscape.py  visualization.py
src/sensitivity_testing/core/: __init__.py  compiler.py  program.py  trace.py
src/sensitivity_testing/oracles/: __init__.py  crash.py  differential.py  emi.py  metamorphic.py
src/sensitivity_testing/utils/: __init__.py  config.py  logging.py  metrics.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_lyapunov.py  test_phase_transition.py  test_sensitivity_oracle.py
